--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ logging.level.com.tt.tco.calculator=DEBUG
 server.port=8081
 # output to a file
 #logging.file.name=app.log
-logging.file.name=D://TCO/app.log
+#logging.file.name=D://TCO/app.log
 
 # temp folder example
 #logging.file=${java.io.tmpdir}/app.log
